[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "cmake>=3.27",
    "pybind11>=3.0",
    "scikit-build>=0.18",
	"setuptools",
	"wheel",
]

[tool.flake8]
exclude = [
	".git",
	"_skbuild",
	"kac_core",
	"unused"
]
ignore = ["E261", "W191", "W504"]
	# E261 - two spaces before inline comment
	# W191 - indentation contains tabs (python prefers spaces, I prefer tabs)
	# W504 - line break before binary operator (if x or y and ... should line break before the operator if necessary)
per-file-ignores = ["*.pyi:E302,E402,E704"]
	# E302 - expected 2 blank lines, found 0 (for .pyi files)
	# E402 - module level import not at top of file
	# E704 - multiple statements on one line (def) - for .pyi files
max-line-length = 120
docstring-quotes = "'''"
multiline-quotes = "'''"

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
files = [
	"example/**/*.py",
	"kac_drumset/**/*.py",
	"kac_drumset/**/*.pyi",
	"test/**/*.py"
]
strict = true